[Update] 중간 merge 230524 1600

--- a/FrontEnd/vue_0517/src/assets/search.css
+++ b/FrontEnd/vue_0517/src/assets/search.css
@@ -1,9 +1,16 @@
 .search-container {
+  /* display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; */
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  position: relative;
+  /* position: fixed; */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .search-wrapper {
